# forastilka

./: Cargo.toml  README.md  rustc-ice-2025-03-18T18_42_50-26356.txt
.cargo/: config.toml
src/: cfg.rs  main.rs  rustilka.rs
src/modules/: display.rs  mod.rs  sd_card.rs
