cargo-features = ["edition2024"]

[package]
name = "forastilka"
version = "0.1.0"
edition = "2024"

[dependencies]
display-interface-spi = "0.5.0"
embassy-embedded-hal = "0.3.0"
embassy-sync = "0.6.2"
embedded-graphics = { version = "0.8.1", features = ["default"] }
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
embedded-sdmmc = "0.8.1"
esp-hal-embassy = { version = "0.6.0", features = ["esp32s3"] }

esp-backtrace = { version = "0.15.0", features = ["esp32s3", "panic-handler", "exception-handler", "println"] }
esp-hal = { version = "0.23.1", features = ["esp32s3", "__esp_hal_embassy", "unstable", "debug"] }
esp-println = { version = "0.13.0", default-features = false, features = ["jtag-serial", "esp32s3", "log"] }
fugit = "0.3.7"
mipidsi = "0.9.0"
xtensa-lx-rt = { version = "0.18.0", features = ["esp32s3"] }
log = "0.4.25"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-8192", "nightly"] }
embassy-time = "0.4.0"
static_cell = "2.1.0"
#static_cell = "2.1.0"
