cargo-features = ["edition2024"]

[package]
name = "forastilka"
version = "0.1.0"
edition = "2024"




[dependencies]
embassy-embedded-hal = "0.3.0"
embassy-sync = "0.6.2"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-8192", "nightly", "executor-interrupt"] }
embassy-time = { version = "0.4.0", features = ["log"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32s3"] }
embassy-futures = "0.1.1"

display-interface-spi = "0.5.0"
embedded-graphics = { version = "0.8.1", features = ["default"] }
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.3.0" }
embedded-sdmmc = "0.8.1"

esp-backtrace = { version = "0.15.0", features = ["esp32s3", "exception-handler", "panic-handler", "print-float-registers", "colors", "println"] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32s3", "__esp_hal_embassy", "unstable", "debug"] }
esp-println = { version = "0.13.1", default-features = false, features = ["jtag-serial", "esp32s3", "log"] }
fugit = "0.3.7"
mipidsi = "0.9.0"
xtensa-lx-rt = { version = "0.18.0", features = ["esp32s3"] }
log = "0.4.25"

static_cell = { version = "2.1.0", features = ["nightly"] }
embedded-text = "0.7.2"
